# websockets-chat

./: Cargo.toml
src/: auth.rs  chat.rs  handling_files.rs  main.rs  shared.rs
static/: chat.html  login.html  register.html
