[package]
name = "websockets2"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8.5"
uuid = { version = "1.1", features = ["v4", "serde"] }
tokio-stream = "0.1.16"

rusqlite = { version = "0.32.1" , features = ["bundled"]}
bcrypt = "0.15.1"
log = "0.4.22"
env_logger = "0.11.5"
lazy_static = "1.5.0"
bytes = "1.8.0"
mime_guess = "2.0.5"
base64 = "0.22.1"